--- a/theme/welcome.html
+++ b/theme/welcome.html
@@ -36,20 +36,20 @@ FACEBOOK: https://www.facebook.com/themefisher
 
   <!-- Essential Stylesheets -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sans:400,600,700,800">
-  <link rel="stylesheet" href="../../static/plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="../../static/plugins/animate.css">
-  <link rel="stylesheet" href="../../static/plugins/slick/slick.css">
-  <link rel="stylesheet" href="../../static/plugins/slick/slick-theme.css">
-  <link rel="stylesheet" href="../../static/plugins/themefisher-fonts/css/themefisher-fonts.min.css">
+  <link rel="stylesheet" href="../static/plugins/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../static/plugins/animate.css">
+  <link rel="stylesheet" href="../static/plugins/slick/slick.css">
+  <link rel="stylesheet" href="../static/plugins/slick/slick-theme.css">
+  <link rel="stylesheet" href="../static/plugins/themefisher-fonts/css/themefisher-fonts.min.css">
 
   <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="../../static/css/style.css">
+  <link rel="stylesheet" href="../static/css/style.css">
   
   <!-- Theme Stylesheet -->
   <link rel="stylesheet" href="#" id="color-changer">
   
   <!--Favicon-->
-  <link rel="icon" href="../../static/images/favicon.png" type="image/x-icon">
+  <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
 
 </head>
 <body><!-- set class="dark" on body tag for DARK-THEME -->
@@ -83,11 +83,11 @@ FACEBOOK: https://www.facebook.com/themefisher
   <div class="pt-table">
     <div class="pt-tablecell page-welcome relative">
       <!-- .close -->
-      <a href="../../theme" class="page-close"><i class="tf-ion-close"></i></a>
+      <a href="" class="page-close"><i class="tf-ion-close"></i></a>
       <!-- /.close -->
 
       <div class="author-image-large">
-        <img src="../../static/images/author.png" alt="">
+        <img src="../static/images/author.png" alt="">
       </div>
 
       <div class="container">
@@ -105,9 +105,9 @@ FACEBOOK: https://www.facebook.com/themefisher
       <nav class="page-nav clear">
   <div class="container">
     <div class="flex flex-middle space-between">
-      <span class="prev-page"><a href="../../theme/index.html" class="link">&larr; Prev Page</a></span>
+      <span class="prev-page"><a href="../portfolio/templates/index.html" class="link">&larr; Prev Page</a></span>
       <span class="copyright">Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>.</span>
-      <span class="next-page"><a href="../../theme/about.html" class="link">Next Page &rarr;</a></span>
+      <span class="next-page"><a href="about.html" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
   <!-- /.page-nav -->
@@ -122,13 +122,13 @@ FACEBOOK: https://www.facebook.com/themefisher
 <!-- 
 Essential Scripts
 =====================================-->
-<script src="../../static/plugins/jquery-2.2.4.min.js"></script>
-<script src="../../static/plugins/bootstrap/bootstrap.min.js"></script>
-<script src="../../static/plugins/jquery.nicescroll.min.js"></script>
-<script src="../../static/plugins/isotope/isotope.pkgd.min.js"></script>
-<script src="../../static/plugins/slick/slick.min.js"></script>
+<script src="../static/plugins/jquery-2.2.4.min.js"></script>
+<script src="../static/plugins/bootstrap/bootstrap.min.js"></script>
+<script src="../static/plugins/jquery.nicescroll.min.js"></script>
+<script src="../static/plugins/isotope/isotope.pkgd.min.js"></script>
+<script src="../static/plugins/slick/slick.min.js"></script>
 
-<script src="../../static/js/script.js"></script>
+<script src="../static/js/script.js"></script>
 
 </body>
 </html>
